[package]
name = "zig_tool"
version = "0.9.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.3.0"
proto_pdk = "0.28.3"
serde = "1.0.218"

[dev-dependencies]
proto_pdk_test_utils = "0.35.4"
starbase_sandbox = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
