[package]
name = "zig_tool"
version = "0.10.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.28.9"
serde = "1.0.219"

[dev-dependencies]
proto_pdk_test_utils = "0.37.2"
starbase_sandbox = "0.9.3"
tokio = { version = "1.45.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
