[package]
name = "zig_tool"
version = "0.11.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32.8"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proto_pdk_test_utils = "0.44.1"
starbase_sandbox = "0.10.7"
tokio = { version = "1.51.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
